--- a/contato.html
+++ b/contato.html
@@ -9,58 +9,54 @@
     <link rel="stylesheet" href="/css/site.css">
     <style>
         html{
-            background-color: lightsalmon;
+            background-color: rgb(16, 71, 71);
             padding: 20px;
         }
         nav a{
-            color: white;
-        }
-        nav a:hover{
             color: black;
         }
+        nav a:hover{
+            color: green;
+        }
         nav ul{
-            background-color: lightsalmon;
+            background-color: rgb(16, 71, 71);
 
         }
         nav ul li:hover{
-            background-color: brown;
+            background-color: darkblue;
         }
     </style>
 </head>
 
 <body>
-
     <header>
-        <img src="/img/casa.jpeg" alt="">
+        <img src="img/contato.jpeg" alt="">
 
-        <h1><b>Home</b></h1>
+        <h1><b>Contato</b></h1>
     </header>
 
     <nav>
-
         <ul>
             <li><a href="/index.html">Inicio</a></li>
             <li><a href="/cv.html">Curriculo</a></li>
             <li><a href="/contato.html">Contato</a></li>
+
         </ul>
+
     </nav>
+
+
 
 
     <main>
 
-        <h2><i>Welcome in my page</i></h2>
-        <p>The site is continuos constructor, </p>
-        <ul> Redes Sociais
-            <li style="font-style: italic;"><a href="https://www.linkedin.com/in/filipe-albuquerque-9689891a5/" target="_blank">Linkedin</a></li>
-            <li style="font-style: italic;">Instagram</li>
-            <li style="font-style: italic;">GitHub</li>
-        </ul>
+      
+
     </main>
+
     <footer>
         <hr>
     </footer>
-
-
 </body>
 
 </html>
