sidbar nav adicionada

--- a/index.html
+++ b/index.html
@@ -10,15 +10,22 @@
 </head>
 
 <body>
+    
     <header>
-        <div class="logo"><a href="index.html">Flip.</a> </div>
-        <a href=""><div class="menu">
-            <div class="menu-line"></div>
-            <div class="menu-line"></div>
-            <div class="menu-line"></div>
-        </div></a>
-        
-    </header>
+        <nav>
+          <a class="logo" href="/">Flip.</a>
+          <div class="mobile-menu">
+            <div class="line1"></div>
+            <div class="line2"></div>
+            <div class="line3"></div>
+          </div>
+          <ul class="nav-list">
+            <li><a href="#">Sobre</a></li>
+            <li><a href="#">Projetos</a></li>
+            <li><a href="#">Contato</a></li>
+          </ul>
+        </nav>
+      </header>
     <section class="container">
         <div class="left">
             <div class="info">
@@ -61,7 +68,7 @@
         Copyright ©2022 All rights reserved | This website is made with love by <a href="https://www.linkedin.com/in/filipe-albuquerque-9689891a5/">Filipe Albuquerque</a>.
 
     </footer>
-
+<script src="assets/scripts/scripts.js"></script>
 </body>
 
 </html>
