Responsividade do portifolio

--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
             <div class="line3"></div>
           </div>
           <ul class="nav-list">
-            <li><a href="#">Sobre</a></li>
-            <li><a href="#">Projetos</a></li>
-            <li><a href="#">Contato</a></li>
+            <li><a href="#">About</a></li>
+            <li><a href="#">Projects</a></li>
+            <li><a href="#">Contact</a></li>
           </ul>
         </nav>
       </header>
@@ -43,9 +43,12 @@
         </div>
 
 
-    <!-- </section>
+    </section>
 
-    <section class="container">
+  
+    
+
+   <!--  <section class="container">
         <div class="left">
             <div class="info">
                 <div class="profession">Full Stack Developer</div>
@@ -65,7 +68,7 @@
     </section> -->
 
     <footer>
-        Copyright ©2022 All rights reserved | This website is made with love by <a href="https://www.linkedin.com/in/filipe-albuquerque-9689891a5/">Filipe Albuquerque</a>.
+        Copyright ©2022 All rights reserved | This website is made with love by <a href="https://www.linkedin.com/in/filipe-albuquerque-9689891a5/"  target="_blank">Filipe Albuquerque</a>.
 
     </footer>
 <script src="assets/scripts/scripts.js"></script>
