--- a/index.html
+++ b/index.html
@@ -7,26 +7,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Filipe Albuquerque</title>
     <link rel="stylesheet" href="assets/css/style.css">
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
 </head>
 
 <body>
     
     <header>
         <nav>
-          <a class="logo" href="/">Flip.</a>
+          <a class="logo" href="#home">Flip.</a>
           <div class="mobile-menu">
             <div class="line1"></div>
             <div class="line2"></div>
             <div class="line3"></div>
           </div>
           <ul class="nav-list">
-            <li><a href="#">About</a></li>
+            <li><a href="#about">About</a></li>
             <li><a href="#">Projects</a></li>
             <li><a href="#">Contact</a></li>
           </ul>
         </nav>
       </header>
-    <section class="container">
+    <section class="container" id="home">
         <div class="left">
             <div class="info">
                 <div class="profession">Full Stack Developer</div>
@@ -48,7 +49,7 @@
   
     
 
-   <!--  <section class="container">
+    <section class="container" id="about">
         <div class="left">
             <div class="info">
                 <div class="profession">Full Stack Developer</div>
@@ -65,13 +66,15 @@
         </div>
 
 
-    </section> -->
+    </section>
 
     <footer>
         Copyright ©2022 All rights reserved | This website is made with love by <a href="https://www.linkedin.com/in/filipe-albuquerque-9689891a5/"  target="_blank">Filipe Albuquerque</a>.
 
     </footer>
 <script src="assets/scripts/scripts.js"></script>
+<script src="assets/scripts/scriptsjq.js"></script>
+
 </body>
 
 </html>
