correção de palavras

--- a/index.html
+++ b/index.html
@@ -523,7 +523,7 @@
                         <img src="assets/img/portfolio3.gif" alt="" class="portfolio__img">
 
                         <div class="portfolio__data">
-                            <h3 class="portfolio__title">Agenda Hospitalar</h3>
+                            <h3 class="portfolio__title">Waiting...</h3>
                             <p class="portfolio__description">news soon.</p>
                             <a href="#" class="button button--flex button--smal portfolio__button">
                                 Demo
