--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <!--==================== HEADER ====================-->
     <header class="header" id="header">
         <nav class="nav container">
-            <a href="#" class="nav__log">Filipe</a>
+            <a href="#" class="nav__log">Flip</a>
             <div class="nav__menu" id="nav-menu">
                 <ul class="nav__list grid">
                     <li class="nav__item">
