--- a/index.html
+++ b/index.html
@@ -643,26 +643,26 @@
                     <div class="contact__inputs grid">
                         <div class="contact__content">
                             <label for="" class="contact__label">Name</label>
-                            <input type="text" class="contact__input">
+                            <input id="contact_name" type="text" class="contact__input" onkeydown="sendEmail()">
                         </div>
 
                         <div class="contact__content">
                             <label for="" class="contact__label">E-mail</label>
-                            <input type="email" class="contact__input">
+                            <input id="contact_email" type="email" class="contact__input" onkeydown="sendEmail()">
                         </div>
                     </div>
                     <div class="contact__content">
                         <label for="" class="contact__label">Project</label>
-                        <input type="text" class="contact__input">
+                        <input id="contact_subject" type="text" class="contact__input" onkeydown="sendEmail()">
                     </div>
 
                     <div class="contact__content">
                         <label for="" class="contact__label">Message</label>
-                        <textarea name="" id="" cols="0" rows="7" class="contact__input"></textarea>
+                        <textarea id="contact_message" name="" id="" cols="0" rows="7" class="contact__input" onkeydown="sendEmail()"></textarea>
                     </div>
 
                     <div>
-                        <a href="#" class="button button--flex">
+                        <a id="button-send" href="#" class="button button--flex" ">
                             Send message
                             <i class="uil uil-message button__icon"></i>
                         </a>
