--- a/calc.html
+++ b/calc.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-eidth, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Calculator fist project</title>
-    <link href="style.css" rel="stylesheet">
-    <script src="script.js" defer></script>
+    <title>Calculator</title>
+    <link href="stylecalc.css" rel="stylesheet">
+    <script src="scriptcalc.js" defer></script>
 </head>
 <body>
     <div class="calculator-grid">
