--- a/index.html
+++ b/index.html
@@ -547,7 +547,7 @@
                             <h3 class="portfolio__title">Web Calculator</h3>
                             <p class="portfolio__description">Project developed to train knowledge in javascript, css
                                 and html.</p>
-                            <a href="#" class="button button--flex button--smal portfolio__button">
+                            <a href="./calc.html" target="_blanc" class="button button--flex button--smal portfolio__button">
                                 Demo
                                 <i class="uil uil-arrow-right button__icon"></i>
                             </a>
